# imgworks

./: .bumpversion.cfg  .gitignore  pyproject.toml  readme.md
.github/workflows/: release.yml
src/asset_sizer/: __main__.py
src/imgworks/: __main__.py  image.py  settings.py
