[tool.poetry]
name = "asset-resizer"
version = "0.1.0"
description = ""
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
# readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
imageio = "^2.31.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"

[tool.poetry.scripts]
asset-sizer = "asset_resizer.__main__:app"

[tool.ruff]
select = ["E", "F", "W", "Q", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
