[tool.poetry]
name = "asset-sizer"
version = "0.2.0"
description = ""
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
# readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
imageio = "^2.31.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"

[tool.poetry.scripts]
rsize = "asset_sizer.__main__:app"

[tool.ruff]
select = ["E", "F", "W", "Q", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
