[tool.poetry]
name = "imgworks"
version = "0.2.0"
description = ""
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
imageio = "^2.31.1"
pillow-heif = "^0.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.282"
black = "^23.9.1"
bump2version = "^1.0.1"

[tool.poetry.scripts]
imgworks = "imgworks.__main__:app"

[tool.ruff]
select = ["E", "F", "W", "Q", "I"]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
